; ModuleID = '/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_string.c__zip_string_crc32.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_string.c__zip_string_crc32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zip_string = type { i32, i32 }

@Z_NULL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @_zip_string_crc32(%struct.zip_string* %0) #0 {
  %2 = alloca %struct.zip_string*, align 8
  %3 = alloca i64, align 8
  store %struct.zip_string* %0, %struct.zip_string** %2, align 8
  %4 = load i32, i32* @Z_NULL, align 4
  %5 = call i64 @crc32(i64 0, i32 %4, i32 0)
  store i64 %5, i64* %3, align 8
  %6 = load %struct.zip_string*, %struct.zip_string** %2, align 8
  %7 = icmp ne %struct.zip_string* %6, null
  br i1 %7, label %8, label %17

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = load %struct.zip_string*, %struct.zip_string** %2, align 8
  %11 = getelementptr inbounds %struct.zip_string, %struct.zip_string* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.zip_string*, %struct.zip_string** %2, align 8
  %14 = getelementptr inbounds %struct.zip_string, %struct.zip_string* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @crc32(i64 %9, i32 %12, i32 %15)
  store i64 %16, i64* %3, align 8
  br label %17

17:                                               ; preds = %8, %1
  %18 = load i64, i64* %3, align 8
  ret i64 %18
}

declare dso_local i64 @crc32(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
